--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,36 +81,36 @@
     <script src="{{ "/assets/js/portfolio.js" | relative_url }}"></script>
     <svg class="glass-filter-defs" aria-hidden="true">
       <defs>
-        <filter id="glass-filter-nav" x="-30%" y="-70%" width="160%" height="240%" color-interpolation-filters="sRGB">
-          <feTurbulence type="fractalNoise" baseFrequency="0.02 0.08" numOctaves="2" seed="9" result="noise" />
-          <feGaussianBlur in="noise" stdDeviation="1.2" result="soft-noise" />
-          <feDisplacementMap in="SourceGraphic" in2="soft-noise" scale="6" xChannelSelector="R" yChannelSelector="G" result="distorted" />
-          <feColorMatrix in="distorted" type="saturate" values="1.15" result="saturated" />
+        <filter id="glass-filter-nav" x="0%" y="0%" width="100%" height="100%" color-interpolation-filters="sRGB">
+          <feImage x="0" y="0" width="100%" height="100%" preserveAspectRatio="none"
+            href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20100%20100'%3E%3Cdefs%3E%3ClinearGradient%20id='grad-r'%20x1='1'%20y1='0'%20x2='0'%20y2='0'%3E%3Cstop%20offset='0%25'%20stop-color='%23000000'%20stop-opacity='0'/%3E%3Cstop%20offset='100%25'%20stop-color='%23ff0000'/%3E%3C/linearGradient%3E%3ClinearGradient%20id='grad-b'%20x1='0'%20y1='0'%20x2='0'%20y2='1'%3E%3Cstop%20offset='0%25'%20stop-color='%23000000'%20stop-opacity='0'/%3E%3Cstop%20offset='100%25'%20stop-color='%230000ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width='100'%20height='100'%20fill='%23000000'/%3E%3Crect%20width='100'%20height='100'%20rx='20'%20fill='url(%23grad-r)'/%3E%3Crect%20width='100'%20height='100'%20rx='20'%20fill='url(%23grad-b)'%20style='mix-blend-mode%3Adifference'/%3E%3C/svg%3E" result="map"/>
+          <feDisplacementMap in="SourceGraphic" in2="map" scale="4" xChannelSelector="R" yChannelSelector="G" result="disp-base"/>
 
-          <feColorMatrix in="saturated" type="matrix"
+          <feDisplacementMap in="SourceGraphic" in2="map" scale="8" xChannelSelector="R" yChannelSelector="G" result="disp-red"/>
+          <feColorMatrix in="disp-red" type="matrix"
             values="1 0 0 0 0
                     0 0 0 0 0
                     0 0 0 0 0
-                    0 0 0 1 0" result="red-channel" />
-          <feOffset in="red-channel" dx="0.25" dy="0.12" result="red-shift" />
+                    0 0 0 1 0" result="red"/>
 
-          <feColorMatrix in="saturated" type="matrix"
+          <feDisplacementMap in="SourceGraphic" in2="map" scale="10" xChannelSelector="R" yChannelSelector="G" result="disp-green"/>
+          <feColorMatrix in="disp-green" type="matrix"
             values="0 0 0 0 0
                     0 1 0 0 0
                     0 0 0 0 0
-                    0 0 0 1 0" result="green-channel" />
-          <feOffset in="green-channel" dx="-0.18" dy="0.08" result="green-shift" />
+                    0 0 0 1 0" result="green"/>
 
-          <feColorMatrix in="saturated" type="matrix"
+          <feDisplacementMap in="SourceGraphic" in2="map" scale="12" xChannelSelector="R" yChannelSelector="G" result="disp-blue"/>
+          <feColorMatrix in="disp-blue" type="matrix"
             values="0 0 0 0 0
                     0 0 0 0 0
                     0 0 1 0 0
-                    0 0 0 1 0" result="blue-channel" />
-          <feOffset in="blue-channel" dx="0.12" dy="-0.18" result="blue-shift" />
+                    0 0 0 1 0" result="blue"/>
 
-          <feBlend in="red-shift" in2="green-shift" mode="screen" result="rg-blend" />
-          <feBlend in="rg-blend" in2="blue-shift" mode="screen" result="rgb-blend" />
-          <feBlend in="rgb-blend" in2="distorted" mode="lighten" />
+          <feBlend in="red" in2="green" mode="screen" result="rg"/>
+          <feBlend in="rg" in2="blue" mode="screen" result="rgb"/>
+          <feBlend in="rgb" in2="disp-base" mode="lighten"/>
+          <feGaussianBlur in="disp-base" stdDeviation="0.6"/>
         </filter>
       </defs>
     </svg>
