--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,38 +79,40 @@
 
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/portfolio.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/glass-nav.js" | relative_url }}"></script>
     <svg class="glass-filter-defs" aria-hidden="true">
       <defs>
         <filter id="glass-filter-nav" x="0%" y="0%" width="100%" height="100%" color-interpolation-filters="sRGB">
-          <feImage x="0" y="0" width="100%" height="100%" preserveAspectRatio="none"
-            href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20100%20100'%3E%3Cdefs%3E%3ClinearGradient%20id='grad-r'%20x1='1'%20y1='0'%20x2='0'%20y2='0'%3E%3Cstop%20offset='0%25'%20stop-color='%23000000'%20stop-opacity='0'/%3E%3Cstop%20offset='100%25'%20stop-color='%23ff0000'/%3E%3C/linearGradient%3E%3ClinearGradient%20id='grad-b'%20x1='0'%20y1='0'%20x2='0'%20y2='1'%3E%3Cstop%20offset='0%25'%20stop-color='%23000000'%20stop-opacity='0'/%3E%3Cstop%20offset='100%25'%20stop-color='%230000ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width='100'%20height='100'%20fill='%23000000'/%3E%3Crect%20width='100'%20height='100'%20rx='20'%20fill='url(%23grad-r)'/%3E%3Crect%20width='100'%20height='100'%20rx='20'%20fill='url(%23grad-b)'%20style='mix-blend-mode%3Adifference'/%3E%3C/svg%3E" result="map"/>
-          <feDisplacementMap in="SourceGraphic" in2="map" scale="6" xChannelSelector="R" yChannelSelector="G" result="disp-base"/>
+          <feImage id="glass-nav-map" x="0" y="0" width="100%" height="100%" preserveAspectRatio="none" result="map" />
+          <feGaussianBlur in="map" stdDeviation="1.2" result="map-soft" />
 
-          <feDisplacementMap in="SourceGraphic" in2="map" scale="12" xChannelSelector="R" yChannelSelector="G" result="disp-red"/>
+          <feDisplacementMap in="SourceGraphic" in2="map-soft" scale="8" xChannelSelector="R" yChannelSelector="G" result="disp-base" />
+
+          <feDisplacementMap in="SourceGraphic" in2="map-soft" scale="16" xChannelSelector="R" yChannelSelector="G" result="disp-red" />
           <feColorMatrix in="disp-red" type="matrix"
             values="1 0 0 0 0
                     0 0 0 0 0
                     0 0 0 0 0
-                    0 0 0 1 0" result="red"/>
+                    0 0 0 1 0" result="red" />
 
-          <feDisplacementMap in="SourceGraphic" in2="map" scale="15" xChannelSelector="R" yChannelSelector="G" result="disp-green"/>
+          <feDisplacementMap in="SourceGraphic" in2="map-soft" scale="20" xChannelSelector="R" yChannelSelector="G" result="disp-green" />
           <feColorMatrix in="disp-green" type="matrix"
             values="0 0 0 0 0
                     0 1 0 0 0
                     0 0 0 0 0
-                    0 0 0 1 0" result="green"/>
+                    0 0 0 1 0" result="green" />
 
-          <feDisplacementMap in="SourceGraphic" in2="map" scale="18" xChannelSelector="R" yChannelSelector="G" result="disp-blue"/>
+          <feDisplacementMap in="SourceGraphic" in2="map-soft" scale="24" xChannelSelector="R" yChannelSelector="G" result="disp-blue" />
           <feColorMatrix in="disp-blue" type="matrix"
             values="0 0 0 0 0
                     0 0 0 0 0
                     0 0 1 0 0
-                    0 0 0 1 0" result="blue"/>
+                    0 0 0 1 0" result="blue" />
 
-          <feBlend in="red" in2="green" mode="screen" result="rg"/>
-          <feBlend in="rg" in2="blue" mode="screen" result="rgb"/>
-          <feBlend in="rgb" in2="disp-base" mode="lighten"/>
-          <feGaussianBlur in="disp-base" stdDeviation="0.8"/>
+          <feBlend in="red" in2="green" mode="screen" result="rg" />
+          <feBlend in="rg" in2="blue" mode="screen" result="rgb" />
+          <feBlend in="rgb" in2="disp-base" mode="lighten" />
+          <feGaussianBlur in="disp-base" stdDeviation="0.9" />
         </filter>
       </defs>
     </svg>
