--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,8 +1,7 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
 <!-- head-custom.html -->
-<script defer src="/assets/js/graph.js"></script>
-<script defer src="/assets/js/portfolio.js"></script>
+<script type="module" defer src="{{ '/assets/js/hero3d.js' | relative_url }}"></script>
 
 
 <!-- Setup Google Analytics -->
