--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,7 +1,7 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
 <!-- head-custom.html -->
-<script type="module" defer src="{{ '/assets/js/hero3d.js' | relative_url }}"></script>
+<script type="module" src="{{ '/assets/js/hero3d.js' | relative_url }}"></script>
 
 
 <!-- Setup Google Analytics -->
