--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -478,7 +478,8 @@ body {
   display: flex;
   gap: 12px;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: center;
 }
 
 .profile-panel__canvas {
