feature: cursor animation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,8 +78,17 @@
       </div>
     </div>
 
+    <div class="target-cursor" aria-hidden="true">
+      <div class="target-cursor__dot"></div>
+      <div class="target-cursor__corner corner-tl"></div>
+      <div class="target-cursor__corner corner-tr"></div>
+      <div class="target-cursor__corner corner-br"></div>
+      <div class="target-cursor__corner corner-bl"></div>
+    </div>
+
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/portfolio.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/glass-filter.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/target-cursor.js" | relative_url }}"></script>
   </body>
 </html>
